--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,9 @@ cmake_minimum_required(VERSION 2.4)
 if(COMMAND cmake_policy)
     cmake_policy(SET CMP0054 NEW)
     cmake_policy(SET CMP0003 NEW)
+    if (POLICY CMP0092)
+        cmake_policy(SET CMP0092 NEW)
+    endif()
 endif(COMMAND cmake_policy)
 
 # project name and language
